[project]
name = "learning-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "langchain>=1.3.14",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
